<resources>
    <string name="app_name">FollowPlan</string>
    <string name="action_settings">Settings</string>
    <string name="all_tasks">Uncompleted tasks</string>
    <string name="plans">Plans</string>
    <string name="filters">Filters</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="today">Today</string>
    <string name="every_day">Every day</string>
    <string name="every_week">Every week</string>
    <string name="every_month">Every month</string>
    <string name="create_period">Create time period</string>
    <string name="customize_plans">Customize plans</string>
    <string name="cancel">Cancel</string>
    <string name="edit_plan">Edit plan</string>
    <string name="input_plan_name">Input plan name</string>
    <string name="name">Name</string>
    <string name="delete_plan_question">Delete plan?</string>
    <string name="delete">Delete</string>
    <string name="plan_delete_success">Plan deleted</string>
    <string name="plan_name">Kill Bill</string>
    <string name="create_plan">Create plan</string>
    <string name="search_hint">Search</string>
    <string name="checkbox_unchecked">{faw-square-o}</string>
    <string name="create_task">Create task</string>
    <string name="task_name">Name</string>
    <string name="repetetive">Repetetive</string>
    <string name="edit">Edit</string>
    <string name="plan_list">Plan list</string>
    <string name="period_list">Period list</string>
    <string name="edit_task">Edit task</string>
    <string name="input_task_name">Input task name</string>
    <string name="date_not_set">Date not set</string>
    <string name="faw_check">{faw-check}</string>
    <string name="faw_undo">{faw-undo}</string>
    <string name="faw_edit">{faw-pencil}</string>
    <string name="faw_trash">{faw-trash}</string>
    <string name="faw_clock">{faw-clock_o}</string>
    <string name="delete_task_question">Delete task?</string>
    <string name="no_notification">Without time</string>
    <string name="faw_gear">{faw-gear}</string>
    <string name="faw_plus">{faw-plus}</string>
    <string name="no_time_notification">No time for notification</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="time_notification">Default notification time</string>
    <string name="settings_category">category</string>
    <string name="set">Set</string>
    <string name="notification_date_time">Notification Date and Time</string>
    <string name="faw_close">{faw-close}</string>
    <string name="faw_calendar_check">{faw-calendar_check_o}</string>
    <string name="period_days">Plan periodicity in days</string>
    <string name="period_date_start">Start date</string>
    <string name="period_number_of_days_not_zero">Number of days must not be 0</string>
    <string name="input_number_of_days">Input number of days</string>
    <string name="edit_period">Edit period of time</string>
    <string name="no_tasks_today">No tasks for today,</string>
    <string name="one_task_today">Task for today,</string>
    <string name="several_tasks_today">Tasks for today,</string>
    <string name="notification_title_part_1">Notification for </string>
    <string name="notification_title_part_2_single">task</string>
    <string name="notification_title_part_2_plural">tasks</string>
    <string name="current_tasks">current tasks</string>
    <string name="uncompleted_tasks">Uncompleted tasks</string>
    <string name="completed_tasks">Completed tasks</string>
    <string name="tasks">Tasks</string>
    <string name="total">Total:</string>
    <string name="report_bug">Report bug</string>
    <string name="error_title">Follow Plan bug</string>
    <string name="hello">Hello,</string>
    <string name="no_email_clients">No email clients installed.</string>
    <string name="faw_refresh">{faw-refresh}</string>
    <string name="refresh">Reset</string>
    <string name="refresh_plan_question">Reset plan statistics?</string>
    <string name="notifications_on">notification_switch</string>
    <string name="importance">Importance</string>

</resources>
