<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar_create"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tool_bar"
        >

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="@dimen/activity_horizontal_padding">

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_period_days"
                android:clickable="true"
                android:hint="@string/task_name"
                android:inputType="textCapSentences"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_plan_list"
                android:text="@string/plan_list"
                android:layout_below="@id/et_period_days"
                android:layout_marginTop="@dimen/common_margin"
                style="@style/TextviewSecondaryMedium"
                android:textColor="@color/accent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/tv_plan_list"
                android:background="@color/accent"/>

            <android.support.v7.widget.AppCompatSpinner
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/spinner_plan"
                android:layout_below="@+id/tv_plan_list"
                android:layout_marginTop="@dimen/common_margin"
                style="@android:style/Widget.Material.Light.Spinner"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_period_list"
                android:text="@string/period_list"
                android:layout_below="@id/spinner_plan"
                android:layout_marginTop="@dimen/common_margin"
                style="@style/TextviewSecondaryMedium"
                android:textColor="@color/accent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/accent"
                android:layout_below="@id/tv_period_list"/>

            <android.support.v7.widget.AppCompatSpinner
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/spinner_period"
                android:layout_below="@+id/tv_period_list"
                android:layout_marginTop="@dimen/common_margin"
                style="@android:style/Widget.Material.Light.Spinner"/>

            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cb_disposable"
                android:checked="true"
                android:layout_marginTop="@dimen/common_margin"
                android:layout_below="@+id/spinner_period"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_disposable"
                android:layout_below="@id/spinner_period"
                android:text="@string/repetetive"
                android:layout_toRightOf="@id/cb_disposable"
                android:layout_toEndOf="@id/cb_disposable"
                android:layout_alignBaseline="@+id/cb_disposable"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_date_notification_header"
                android:text="@string/notification_date_time"
                android:layout_below="@id/cb_disposable"
                android:layout_marginTop="@dimen/common_margin"
                style="@style/TextviewSecondaryMedium"
                android:textColor="@color/accent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/tv_date_notification_header"
                android:background="@color/accent"/>

            <com.mikepenz.iconics.view.IconicsButton xmlns:android="http://schemas.android.com/apk/res/android"
                                                     android:layout_width="wrap_content"
                                                     android:layout_height="wrap_content"
                                                     android:id="@+id/btn_set_cancel_date"
                                                     android:textColor="@color/accent"
                                                     android:text="@string/faw_calendar_check"
                                                     style="@android:style/Widget.Holo.Button.Borderless"
                                                     android:layout_alignParentRight="true"
                                                     android:layout_alignParentEnd="true"
                                                     android:layout_below="@+id/tv_date_notification_header"
                                                     android:layout_marginTop="@dimen/common_margin"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_date_start"
                android:text="@string/no_notification"
                android:layout_alignBottom="@id/btn_set_cancel_date"
                android:textColor="@color/secondary_text"
                android:layout_marginTop="@dimen/common_margin"
                style="@android:style/Widget.Material.Light.Spinner"
                android:layout_toLeftOf="@+id/btn_set_cancel_date"
                android:layout_toStartOf="@id/btn_set_cancel_date"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_time_notification"
                android:layout_below="@id/tv_date_start"
                android:textColor="@color/secondary_text"
                android:layout_marginTop="@dimen/common_margin"
                style="@android:style/Widget.Material.Light.Spinner"
                android:enabled="false"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>

